# gha-artifact-upload-test

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
gha_artifact_client/: __init__.py  cli.py  client.py
gha_artifact_client/_vendor/: artifact_node_wrapper.mjs  artifact_node_wrapper.mjs.cdx.json
node-wrapper/: artifact_node_wrapper.js  package-lock.json  package.json
tests/: conftest.py  test_cli.py  test_client.py  test_delete.py  test_get_signed_url.py  test_list.py  test_live_delete.py  test_live_get_signed_url.py  test_live_list.py  test_live_upload.py  test_upload.py
